# phat_squid_demo

./: README.md
indexer_phat/: README.MD  package.json
indexer_phat/.devphase/: releases.json
indexer_phat/contracts/http_client/: Cargo.toml
indexer_phat/contracts/http_client/src/: lib.rs
indexer_phat/stacks/nightly-2024-03-08/: log_server.contract  log_server.sidevm.wasm  sidevm_deployer.contract  system.contract  tokenomic.contract
indexer_phat/tests/http_client/: http_client.test.ts
